Fix layout issues; add alphabetize button

--- a/style.css
+++ b/style.css
@@ -175,6 +175,16 @@ that they form a hexagon */
     margin: 0 auto;
 }
 
+#alphabetize-button-desktop{
+    position: absolute;
+    bottom: 25vh;
+    left: 91.5vw;
+}
+
+#alphabetize-button-mobile {
+    display:none;
+}
+
 .words-container{
     padding-left: 3vw;
     padding-right: 3vw;
@@ -257,10 +267,10 @@ input:hover {
 }
 
 .rules, .high-scores, .contact{
-    margin-top: -70vh;
-    left: 27vw;
+    margin-top: -80vh;
+    left: 20vw;
     position: absolute; 
-    width: 40vw;
+    width: 50vw;
     background-color: hsl(0, 0%, 100%);
     border-radius: 6px;
     border: 2px solid hsl(0, 0%, 88%);
@@ -305,12 +315,12 @@ input:hover {
    
     .rules, .high-scores, .contact {
         display: absolute;
-        top: 80vh;
+        top: 90vh;
         left: 10vw;
         width: 80%;
     }
 
-    button.rules-button, button.scores-button, button.rules-button {
+    button.rules-button, button.scores-button, button.contact-button {
         position:relative;
         left:-8vw;
     }
@@ -319,47 +329,26 @@ input:hover {
     main {
         height:fit-content;
     }
-    /*h1{
-        margin-left: -13vw;
+    .words-container{
+        width: 85%;
     }
-    .hexagon-container{
-        margin-left: 5vw;
-    }*/
     .rules, .high-scores, .contact {
         display: absolute;
-        top: 80vh;
-        left: 5vw;
         width: 80%;
     }
+
     .hexagon-container{
         margin: -5vh 0 -10vh 0;
     }
     body{
         flex-direction:column;
-        overflow-x: hidden;
+        /*overflow-x: hidden;*/
     }
-/*
-    main, aside {
-        margin-left: -10vw;
-    }
-*/
     button.rules-button, button.scores-button, button.contact-button {
         position:relative;
-        left:-7vw;
-    }
-/*
-    .input-container{
-        margin-left: 12vw;
+        left:-15vw;
     }
 
-    .input-container{
-        margin-left: 15vw;
-    }
-
-    .icons{
-        margin-left: 10vw;
-    }
-*/
     .mobile-visible{
         display:block;
         width: 100%;
@@ -368,113 +357,49 @@ input:hover {
     .mobile-hidden{
         display: none;
     }
-/*
-    .words-container{
-        margin-left: 7vw;
-    }
-*/
+
     .words-container, .successful-guess-container {
         height:fit-content;
+        padding-bottom: 2vh;
+    }
+
+    input, .input-container >button{
+        margin-left: 16vw;
+    }
+    .score-label{
+        margin-left: 4vw;
+    }
+    #alphabetize-button-desktop{
+        display:none;
+    }
+    #alphabetize-button-mobile{
+        display: inline-block;
     }
 }
-    
-@media screen and (max-width: 650px) {/*
+
+@media screen and (max-width: 650px) {
     h1{
-        margin-left: -6vw;
-        font-size: 3rem;
-        top: 2vh;
+        font-size: 2.2rem;
     }
-       .icons{
-        margin-left: 22vw;
-          .hexagon-container {
-        top: 15vh;
-        margin-left: 10vw;
+    input, .input-container > button {
+        margin-left: 6vw;
     }
-    }
-      */
-      main{
-          margin-left: 0vw;
-      }
-    button{
-        color: black;
-        display:block;
-        width:43%;
-        height: 6vh;
-        margin-top: 2vh;
-    }
-
-    html, body {
-        max-width: 100%;
-        overflow-x: hidden;
-    }
-
-    .input-container{
-        width:100vw;
-        padding-right: 0px;
-    }
-
-    .input-container>button{
-        width: 80%;
-        margin-right: 0px;
-        padding-right: 0px;
-    }
-
-    input {
-        width: 80%;
-    }
-
-    .words-container{ 
-        width: 80vw;
-    }
-
-    .mobile-visible{
-        display:block;
-        width: 100%;
-    }
-    .mobile-hidden{
-        display: none;
-    }
-    .error-text{
-        width: 80vw;
-    }
-  
-}
-
-@media screen and (max-width: 440px) {
-   /* h1{ 
-        margin-left: -20vw;
-        font-size: 2.5rem;
-    } 
 
     .icons{
-        margin-left: 15vw;
+        margin-left: 13vw;
     }
-
-    main, aside {
-        margin-left: 1vw;
-    }
-   
-    .hexagon-container{
-        margin-left: 0vw;
-    }
-
-    .input-container{
-        margin-left:-3vw;
-    }
-   
-    .words-container{
-        margin-left: -7vw;
-    }
-*/
     .rules, .high-scores, .contact {
         display: absolute;
-        top: 80vh;
+        top: 85vh;
         left: 5vw;
         width: 85%;
     }
+    button.rules-button, button.scores-button, button.contact-button {
+        position:relative;
+        left:-23vw;
+    }
     
     .mobile-visible {
-        margin-left: 15vw;
+        margin-left: 8vw;
     }
-
 }
